PROJECT(VTK_LOADED_COMMANDS)

INCLUDE_DIRECTORIES(${CMAKE_ROOT}/include ${CMAKE_ROOT}/Source)
ADD_LIBRARY(cmVTK_WRAP_TCL2 SHARED cmVTKWrapTcl2Command.c)
ADD_LIBRARY(cmVTK_WRAP_PYTHON2 SHARED cmVTKWrapPython2Command.c)
ADD_LIBRARY(cmVTK_WRAP_JAVA2 SHARED cmVTKWrapJava2Command.c)
ADD_LIBRARY(cmVTK_MAKE_INSTANTIATOR2 SHARED cmVTKMakeInstantiator2Command.c)
